# 1337_python_pool

ex0/: ft_command_quest.py
ex1/: ft_score_analytics.py
ex2/: ft_coordinate_system.py
ex3/: ft_achievement_tracker.py
ex4/: ft_inventory_system.py
ex5/: ft_data_stream.py
ex6/: ft_analytics_dashboard.py
python_pool/moduel_05/ex0/: stream_processor.py
python_pool/moduel_05/ex1/: data_stream.py
python_pool/module_05/: test.py
python_pool/module_05/ex2/: nexus_pipeline.py
python_pool/module_06/: ft_circular_curse.py  ft_import_transmutation.py  ft_pathway_debate.py  ft_sacred_scroll.py
python_pool/module_06/alchemy/: potions.py
python_pool/module_06/alchemy/grimoire/: spellbook.py
python_pool/module_06/alchemy/transmutation/: __init__.py  advanced.py
python_pool/module_07/ex0/: Card.py  CreatureCard.py  main.py
python_pool/module_07/ex1/: ArtifactCard.py  Deck.py  SpellCard.py  main.py
python_pool/module_07/ex2/: Combatable.py  EliteCard.py  Magical.py  main.py
python_pool/module_07/ex3/: AggressiveStrategy.py  CardFactory.py  FantasyCardFactory.py  GameEngine.py  GameStrategy.py  main.py
python_pool/module_07/ex4/: Rankable.py  TournamentCard.py  TournamentPlatform.py  main.py
python_pool/module_08/ex0/: construct.py
python_pool/module_08/ex1/: loading.py  pyproject.toml  requirements.txt
python_pool/module_08/ex2/: .env.example  oracle.py
python_pool/module_09/ex0/: space_station.py
python_pool/module_09/ex1/: alien_contact.py
python_pool/module_09/ex2/: space_crew.py
