[project]
name = "ex1"
version = "0.1.0"
description = ""
authors = [
    {name = "Abdo-1337"}
]
requires-python = ">=3.10"
dependencies = [
    "pandas (<3)",
    "numpy (<2)",
    "matplotlib (>=3.10.8,<4.0.0)",
    "requests (>=2.33.0,<3.0.0)"
]
package-mode = false


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
